Fixes missing dash in docs

--- a/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
+++ b/docs/docs/cmd/spo/file/file-retentionlabel-ensure.mdx
@@ -19,7 +19,7 @@ m365 spo file retentionlabel ensure [options]
 `--fileUrl [fileUrl]`
 : The site- or server-relative URL of the file that should be labelled. Specify either `fileUrl` or `fileId` but not both.
 
-`i, --fileId [fileId]`
+`-i, --fileId [fileId]`
 : The UniqueId (GUID) of the file that should be labelled. Specify either `fileUrl` or `fileId` but not both.
 
 `--name <name>`
