Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -11,6 +11,8 @@ sidebar_position: 4
 - renamed confirm to force [#4551](https://github.com/pnp/cli-microsoft365/issues/4551)
 - removed 'spo list label get' and 'spo list  label set' aliases [#4177](https://github.com/pnp/cli-microsoft365/issues/4177)
 - removed option 'folder' in 'spo folder list' [#4803](https://github.com/pnp/cli-microsoft365/issues/4803)
+- renamed various options [#4467](https://github.com/pnp/cli-microsoft365/issues/4467)
+- removed schemaXml option from 'spo list' commands [#4370](https://github.com/pnp/cli-microsoft365/issues/4370)
 
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
