Fixes various typos in docs

--- a/docs/docs/cmd/aad/user/user-set.mdx
+++ b/docs/docs/cmd/aad/user/user-set.mdx
@@ -87,7 +87,7 @@ If the user with the specified ID or username doesn't exist, or if the specified
 Update specific property _department_ of user with id _1caf7dcd-7e83-4c3a-94f7-932a1299c844_
 
 ```sh
-m365 aad user set --objectId 1caf7dcd-7e83-4c3a-94f7-932a1299c844 --Department IT
+m365 aad user set --objectId 1caf7dcd-7e83-4c3a-94f7-932a1299c844 --department IT
 ```
 
 Update multiple properties of user by name
