--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-add.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant applicationcustomizer add
 
-Add an application customizer as a tenant wide extension.
+Add an application customizer as a tenant wide extension
 
 ## Usage
 
