--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-list.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo tenant applicationcustomizer list
 
-Retrieves a list of application customizers that are installed tenant-wide.
+Retrieves a list of application customizers that are installed tenant-wide
 
 ## Usage
 
