--- a/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant commandset remove
 
-Removes a ListView Command Set that is installed tenant wide.
+Removes a ListView Command Set that is installed tenant wide
 
 ## Usage
 
