--- a/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-set.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant commandset set
 
-Updates a ListView Command Set that is installed tenant wide.
+Updates a ListView Command Set that is installed tenant wide
 
 ## Usage
 
