--- a/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-applicationcustomizer-remove.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 
 # spo tenant applicationcustomizer remove
 
-Removes an application customizer that is installed tenant wide.
+Removes an application customizer that is installed tenant wide
 
 ## Usage
 
