--- a/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-add.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo tenant commandset add
 
-Add a ListView Command Set as a tenant-wide extension.
+Add a ListView Command Set as a tenant-wide extension
 
 ## Usage
 
