--- a/docs/docs/cmd/yammer/network/network-list.mdx
+++ b/docs/docs/cmd/yammer/network/network-list.mdx
@@ -2,7 +2,7 @@ import Global from '/docs/cmd/_global.mdx';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# Yammer network list
+# yammer network list
 
 Returns a list of networks to which the current user has access
 
