--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -268,6 +268,14 @@ In version 7 of the CLI for Microsoft 365, we changed the `id` property of `spo 
 
 Update your scripts to use the list item id for `id` property instead of UniqueId product id.
 
+## Enhanced `aad o365group get` to return only O365 groups
+
+In version 7 of the CLI for Microsoft 365, we have made an update for the command `aad o365group get`. Previously, when executing this command, all groups could be retrieved, even security groups which could lead to misleading results. An extra check has been implemented to ensure that the returned group is effectively a Microsoft 365 group.
+
+### What action do I need to take?
+
+Make sure that, if you wish to use a command to retrieve all groups, that you use [aad group get](./cmd/aad/group/group-get), or update your script so it expects an error when retrieving a non-M365 group.
+
 ## Updated `spo theme list` command output
 
 In version 7 of the CLI For Microsoft 365, we have made an adjustment for the data returned by the `spo theme list` command. Previously, when no items were found, the command had no output. This made this command very unpredictable to use in scripts. The command has now been updated so an empty array will be logged when no items are found.
