Refactors code to use util for retrieving and adding list items. Closes #5309

--- a/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-commandset-get.mdx
@@ -191,7 +191,7 @@ m365 spo tenant commandset get --clientSideComponentId 7096cded-b83d-4eab-96f0-d
   <TabItem value="Markdown">
 
   ```md
-  # spo tenant applicationcustomizer get --id "2" --tenantWideExtensionComponentProperties "true"
+  # spo tenant commandset get --id "2" --tenantWideExtensionComponentProperties "true"
 
   Date: 17/05/2024
 
