--- a/docs/docs/v7-upgrade-guidance.mdx
+++ b/docs/docs/v7-upgrade-guidance.mdx
@@ -2,6 +2,14 @@
 
 The v7 of CLI for Microsoft 365 introduces several breaking changes. To help you upgrade to the latest version of CLI for Microsoft 365, we've listed those changes along with any actions you may need to take.
 
+## Renamed option `confirm` to `force` in all commands
+
+When doing destructive things like deleting a site, CLI for Microsoft 365 asks you to confirm your intention. In version 7 of the CLI for Microsoft 365, we have renamed the option `confirm` to `force` in **all** commands. This change aims to be more consistent with other CLI tools where `force` is used to suppress warnings.
+
+### What action do I need to take?
+
+Update your scripts to use the new option `force` instead of `confirm`. Verify that your scripts work as intended.
+
 ## Removed option `schemaXml` for `spo list` commands
 
 In version 7 of the CLI for Microsoft 365, we have removed the option `schemaXml` for the `spo list add` and `spo list set` commands. This option was used to specify the list schema XML when creating a list. We have removed this option as it is no longer supported by Microsoft 365.
@@ -10,9 +18,9 @@ In version 7 of the CLI for Microsoft 365, we have removed the option `schemaXml
 
 Remove the references to the option `schemaXml` from your scripts. Verify that your scripts work as intended.
 
-## Removed `deleted` option from the `aad user list` command
+## Removed `deleted` option from `aad user list` command
 
-In version 6 of the CLI for Microsoft 365, you can get the deleted users using the command `aad user list` by giving an option `deleted`. Now we have removed that option from the command. For getting the deleted users, you can use the command [aad user recyclebinitem list ](./cmd/aad/user/user-recyclebinitem-list.mdx)
+In the previous version of CLI for Microsoft 365, you could get deleted users in Azure AD using the command `aad user list` and providing an option `deleted`. In the latest release, we have removed that option from the command. To get all deleted users in your tenant, you can now use the command [aad user recyclebinitem list ](./cmd/aad/user/user-recyclebinitem-list.mdx).
 
 ### What action do I need to take?
 
@@ -20,11 +28,11 @@ Remove the references to the `deleted` option in your scripts. Verify that your 
 
 ## Updated `spo tenant commandset set` command with more options
 
-In version 6 of the CLI for Microsoft 365, for setting the list commandset, you can only do it using `id` option. Now we have expanded the feature so that you can also update existing commandset using either of `id` or `title` or `clientSideComponentId`.
+In the previous version of CLI for Microsoft 365, to update a list commandset, you could only specify option `id`. In the latest release, we have expanded the feature so that you can also update existing commandset using either of `id` or `title` or `clientSideComponentId`.
 
 ### What action do I need to take?
 
-Since the option `id` was mandatory in V6 and if your scripts are dependent on the default mandatory error output which the command would return, you may have to update your scripts accordingly.
+Since the option `id` was mandatory in v6 and if your scripts are dependent on the default mandatory error output which the command would return, you may have to update your scripts accordingly.
 
 ## Updated command output for few `flow` comands
 
@@ -40,6 +48,19 @@ Here is a list of the affected commands:
 
 - Make sure that your scripts expect an empty array instead of no output when no results are found.
 - When you are expecting a JSON output, make sure to recheck the response, few duplicate properties are now removed.
+
+## Removed deprecated command aliases
+
+In version 7 of the CLI for Microsoft 365, we have removed deprecated command aliases. These aliases were introduced in previous version to prevent the introduction of breaking changes. The following table lists the deprecated aliases and their replacements.
+
+Alias | Replacement
+--- | ---
+spo list label get | [spo list retentionlabel get](./cmd/spo/list/list-retentionlabel-get.mdx)
+spo list label set | [spo list retentionlabel ensure](./cmd/spo/list/list-retentionlabel-ensure.mdx)
+
+### What action do I need to take?
+
+Update your scripts to use the new commands instead of the deprecated aliases. Verify that your scripts work as intended.
 
 ## Aligned options with naming convention
 
@@ -77,6 +98,7 @@ Command|Old option|New option
 [pp solution publisher add](./cmd/pp/solution/solution-publisher-add.mdx)|`environment`|`environmentName`
 [pp solution publisher list](./cmd/pp/solution/solution-publisher-list.mdx)|`environment`|`environmentName`
 [pp solution publisher remove](./cmd/pp/solution/solution-publisher-remove.mdx)|`environment`|`environmentName`
+[spo file list](./cmd/spo/file/file-list.mdx)|`folder`|`folderUrl`
 [spo listitem attachment list](./cmd/spo/listitem/listitem-attachment-list.mdx)|`itemId`|`listItemId`
 [spo user get](./cmd/spo/user/user-get.mdx)|`loginName`|`userName`
 
