Updates release notes and upgrade guidance

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -15,6 +15,7 @@ sidebar_position: 4
 - removed schemaXml option from 'spo list' commands [#4370](https://github.com/pnp/cli-microsoft365/issues/4370)
 - removed 'deleted' option from 'aad user list' command [#4516](https://github.com/pnp/cli-microsoft365/issues/4516)
 - extended 'spo tenant commandset set' with get options 'id', 'title' or 'clientSideComponentId' [#4961](https://github.com/pnp/cli-microsoft365/issues/4961)
+- updated command output of few 'flow' commands [#4444](https://github.com/pnp/cli-microsoft365/issues/4444)
 
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
