--- a/docs/docs/user-guide/connecting-microsoft-365.mdx
+++ b/docs/docs/user-guide/connecting-microsoft-365.mdx
@@ -150,6 +150,16 @@ When logging in to Microsoft 365 using a secret, CLI for Microsoft 365 will pers
 
 :::
 
+#### Login without setting the environment variables
+
+In all the examples above, we make use of the `CLIMICROSOFT365_AADAPPID` and `CLIMICROSOFT365_TENANT` environment variables. If you don't want to set these environment variables, you can specify the options `appId` and `tenant` when logging in to Microsoft 365.
+
+Below would be the command to log in to Microsoft 365 using a Personal Information Exchange (.pfx) file, execute:
+
+```sh
+m365 login --appId 31359c7f-bd7e-475c-86db-fdb8c937548c --tenant 31359c7f-bd7e-475c-86db-fdb8c937548a -authType certificate --certificateFile /Users/user/dev/localhost.pfx --password 'pass@word1'
+```
+
 #### Log in using a browser authentication
 
 Yet another way to log in to Microsoft 365 in the CLI for Microsoft 365 is by using a an interactive browser authentication. To use this authentication method, call the login command with the `authType` option set to `browser`:
