Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,7 @@ sidebar_position: 4
 - removed 'deleted' option from 'aad user list' command [#4516](https://github.com/pnp/cli-microsoft365/issues/4516)
 - extended 'spo tenant commandset set' with get options 'id', 'title' or 'clientSideComponentId' [#4961](https://github.com/pnp/cli-microsoft365/issues/4961)
 - updated command output of few 'flow' commands [#4444](https://github.com/pnp/cli-microsoft365/issues/4444)
+- migrated CLI to esm [#4306](https://github.com/pnp/cli-microsoft365/issues/4306)
 
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
