--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -17,6 +17,7 @@ sidebar_position: 4
 - extended 'spo tenant commandset set' with get options 'id', 'title' or 'clientSideComponentId' [#4961](https://github.com/pnp/cli-microsoft365/issues/4961)
 - updated command output of few 'flow' commands [#4444](https://github.com/pnp/cli-microsoft365/issues/4444)
 - migrated CLI to esm [#4306](https://github.com/pnp/cli-microsoft365/issues/4306)
+- migrated scripts to esm
 
 ## [v6.10.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
