--- a/docs/docs/cmd/pa/app/app-export.mdx
+++ b/docs/docs/cmd/pa/app/app-export.mdx
@@ -13,13 +13,13 @@ m365 pa app export [options]
 ## Options
 
 ```md definition-list
-`-i, --id <id>`
-: The id of the Power App to export
+`-n, --name <name>`
+: The name of the Power App to export
 
 `-e, --environmentName <environmentName>`
 : The name of the environment for which to export the app
 
-`-n, --packageDisplayName [packageDisplayName]`
+`--packageDisplayName [packageDisplayName]`
 : The display name to use in the exported package
 
 `-d, --packageDescription [packageDescription]`
@@ -42,13 +42,13 @@ m365 pa app export [options]
 Export the specified Power App as a ZIP file
 
 ```sh
-m365 pa app export --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 3989cb59-ce1a-4a5c-bb78-257c5c39381d --packageDisplayName "PowerApp"
+m365 pa app export --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --packageDisplayName "PowerApp"
 ```
 
 Export the specified Power App as a ZIP file with the package displayname, package description, the one who created it, the package source environment and the path
 
 ```sh
-m365 pa app export --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --id 3989cb59-ce1a-4a5c-bb78-257c5c39381d --packageDisplayName "PowerApp" --packageDescription "Power App Description" --packageCreatedBy "John Doe" --packageSourceEnvironment "Contoso" --path "C:/Users/John/Documents"
+m365 pa app export --environmentName Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --name 3989cb59-ce1a-4a5c-bb78-257c5c39381d --packageDisplayName "PowerApp" --packageDescription "Power App Description" --packageCreatedBy "John Doe" --packageSourceEnvironment "Contoso" --path "C:/Users/John/Documents"
 ```
 
 ## Response
