Updates release notes and upgrade guidance

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,10 @@ sidebar_position: 4
 - updated command output of few 'flow' commands [#4444](https://github.com/pnp/cli-microsoft365/issues/4444)
 - migrated CLI to esm [#4306](https://github.com/pnp/cli-microsoft365/issues/4306)
 - migrated scripts to esm
+- updated 'spo tenant applicationcustomizer get' command [#4872](https://github.com/pnp/cli-microsoft365/issues/4872)
+- updated default help mode to 'options' [#5182](https://github.com/pnp/cli-microsoft365/issues/5182)
+- removed deprecated options from 'spo retentionlabel ensure' [#4207](https://github.com/pnp/cli-microsoft365/issues/4207)
+- updated 'teams meeting list' command response [#4782](https://github.com/pnp/cli-microsoft365/issues/4782)
 
 ## [v6.11.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
