Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,20 @@ sidebar_position: 4
 
 # Release notes
 
+## [v6.11.0 (beta)](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
+
+### New commands
+
+**CLI:**
+
+- [cli config list](../cmd/cli/config/config-list.mdx) - list all self set CLI for Microsoft 365 configurations [#4797](https://github.com/pnp/cli-microsoft365/issues/4797)
+
+### Changes
+
+- fixed bug in 'spo navigation node set' to set linkless navigation nodes [#5228](https://github.com/pnp/cli-microsoft365/issues/5228)
+- enhanced docs with examples to use a custom AAD app without using environment variables [#5191](https://github.com/pnp/cli-microsoft365/issues/5191)
+- updated planner Roster util to return a single plan [#5335](https://github.com/pnp/cli-microsoft365/issues/5335)
+
 ## [v6.10.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.10.0)
 
 ### New commands
@@ -15,7 +29,7 @@ sidebar_position: 4
 
 **Teams:**
 
-- [teams chat member add](../cmd/teams/chat/chat-member-add.mdx) - adds a member to a Microsoft Teams chat conversation. [#4898](https://github.com/pnp/cli-microsoft365/issues/4898)
+- [teams chat member add](../cmd/teams/chat/chat-member-add.mdx) - adds a member to a Microsoft Teams chat conversation [#4898](https://github.com/pnp/cli-microsoft365/issues/4898)
 
 ### Changes
 
