--- a/docs/docs/cmd/aad/app/app-set.mdx
+++ b/docs/docs/cmd/aad/app/app-set.mdx
@@ -38,7 +38,7 @@ m365 aad app set [options]
 : Path to the file with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`.
 
 `--certificateBase64Encoded [certificateBase64Encoded]`
-: Base64-encoded string with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`
+: Base64-encoded string with certificate public key. Specify either `certificateFile` or `certificateBase64Encoded`.
 
 `--certificateDisplayName [certificateDisplayName]`
 : Display name for the certificate. If not given, the displayName will be set to the certificate subject. When specified, also specify either `certificateFile` or `certificateBase64Encoded`.
